[package]
name = "mqtt_demo"
version = "0.1.0"
authors = ["kumatata <chinagxwei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.1", features = ["full"] }
lazy_static = "1.4.0"
num_enum = "0.5.1"
