[package]
name = "mqtt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.1", features = ["full"] }
tokio-rustls = "0.23.0"
rustls-pemfile = "0.2.1"
lazy_static = "1.4.0"
num_enum = "0.5.1"
async-trait = "0.1.51"
log = "0.4.14"
log4rs = "1.0.0"
